# Monitor-Zasobow

./: CMakeLists.txt  README.md  main.cpp  monitor.cpp
bulid/: CMakeCache.txt  Makefile  cmake_install.cmake  lime_refactored
include/: lime_core.hpp  structs.hpp  ui.hpp
src/: lime_core.cpp  main.cpp  ui.cpp
